--- a/codigo_original/SRC/CSS/editor_proyecto.css
+++ b/codigo_original/SRC/CSS/editor_proyecto.css
@@ -1,8 +1,63 @@
-.container{
-    
-    height: 5cm;
+.containerHijo:hover {
+    #crearProyectoSimbol {
+        width: 60px;
+        top: 48%;
+        left: 50%;
+    }
+
 }
 
-.botonContainer{
-    height: 50%;
+* {
+    border-radius: 0px !important;
+}
+
+.btn-group .btn {
+    width: 50%;
+}
+
+.btn-group {
+    width: 100%;
+}
+
+@font-face {
+    font-family: "AgrandirRegular";
+    src: url("../fuentes/PPAgrandir/PPAgrandir-Regular.otf") format("opentype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+#logo_weizz {
+    height: 7em;
+    margin-left: 15px;
+}
+
+.hrLinea {
+    width: 100%;
+    border: 2px solid;
+}
+
+header {
+    margin-top: 15px;
+    background-image: url("../imagenes_web/background_header_2.png");
+    background-repeat: no-repeat;
+    background-position: 100% 0%;
+
+}
+
+#encabezado {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tituloHeader {
+    font-family: 'AgrandirRegular';
+    font-size: 30px;
+    color: black;
+    text-decoration-line: none;
+}
+
+.tituloHeader:hover {
+    text-decoration-line: underline;
 }
