--- a/codigo_original/SRC/CSS/welcome_page.css
+++ b/codigo_original/SRC/CSS/welcome_page.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: #EFEFEF;
 }
 
@@ -73,7 +73,7 @@ body {
 #tusProyectos {
     font-family: 'AgrandirRegular';
     text-decoration-line: underline;
-    
+
 }
 
 #cuadroCrearProyecto {
@@ -90,7 +90,7 @@ body {
     color: black;
     font-size: 20px;
     margin-left: 15px;
-    
+
 }
 
 #crearProyectoSimbol {
@@ -108,7 +108,6 @@ body {
         left: 48%;
     }
 
-    
 
 }
 
@@ -118,20 +117,41 @@ body {
 }
 
 .dropdown {
-    position: relative;
+    position:absolute;
+    margin-top:1px;
     display: inline-block;
-  }
-  
-  .dropdown-content {
+    width: 30px;
+    margin-left:9em; 
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
-  }
-  
-  .dropdown:hover .dropdown-content {
+}
+
+.dropdown:hover{ .dropdown-content {
     display: block;
-  }
+}}
+
+.projectCol{
+    background-color: #969696;
+    height: 11em;
+    width: 11em;
+    border: 2px solid black;
+    border-radius: 20px; 
+}
+
+.titutloProject{
+    font-family: 'AgrandirRegular'; 
+    color: black;font-size: 25px; 
+}
+
+.flechaOpcionesProyecto{
+    width: 30px;
+    margin-top:5px
+}
