--- a/codigo_original/SRC/CSS/forms/iniciar_sesion_form.css
+++ b/codigo_original/SRC/CSS/forms/iniciar_sesion_form.css
@@ -29,7 +29,7 @@ body{
 }
 
 header {
-    margin-top: 15px;
+    padding-top: 15px;
     background-image: url("../../imagenes_web/background_header_2.png");
     background-repeat: no-repeat;
     background-position: 100% 0%;
@@ -59,6 +59,7 @@ body {
     background-size: auto;
     background-position: 0% 100%;
     background-size: 55%;
+    min-height: 100vh;
 
 }
 
