--- a/codigo_original/SRC/CSS/seleccion_base.css
+++ b/codigo_original/SRC/CSS/seleccion_base.css
@@ -72,12 +72,12 @@ body {
 }
 
 .cuadroBase{
-    background-color: #969696;
     height: 11em;
     width: 11em;
     border: 2px solid black;
     border-radius: 20px;
     position: relative;
+    
 }
 
 .baseTitle{
@@ -96,4 +96,18 @@ body {
         border: 4px solid black;
     }
 
+}
+
+#baseBasico{
+    background-image: url('../imagenes_web/base_basico.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#baseMultiple{
+    background-image: url('../imagenes_web/base_multiple.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
