Vista admin: ver last session de cada usuario. Visualizar nombre y pryectos de cada usuario (no se puede acceder al proyecto).

--- a/codigo_original/SRC/CSS/admin/all_users.css
+++ b/codigo_original/SRC/CSS/admin/all_users.css
@@ -24,3 +24,10 @@ body{
     border-color: #efefef00;
 }
 
+#mainTitle{
+    font-family: 'Gladiola';
+    font-size: 3em;
+    text-decoration-line: underline;
+    color: #FF4242;
+    text-align: center;
+}
